bug fixing back to top and navigation events on mobile (#25)

--- a/src/scss/components/_top.scss
+++ b/src/scss/components/_top.scss
@@ -2,17 +2,22 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  background-color: $color-primary;
   color: $color-white;
-  font-size: 1.5rem;
-  padding: 1.5rem;
+  background-color: $color-primary;
   z-index: 2;
   box-shadow: 0 1rem 1rem rgba(0,0,0,0.2);
   transition: 0.2s all ease-in-out;
+  font-size: 1.5rem;
+  border: 0;
 
   .fa-arrow-up {
     display: block;
     text-align: center;
+  }
+
+  a {
+    display: block;
+    padding: 1.5rem;
   }
 
   &:hover {
